--- a/RevitExportTool/RevitExportTool.csproj
+++ b/RevitExportTool/RevitExportTool.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\RelayCommand.cs" />
     <Compile Include="ViewModel\RevitExportViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
     <Compile Include="View\RevitExportView.xaml.cs">
